Use lombok for data class