@@ -32,6 +32,7 @@ import org.mockito.stubbing.Answer;
 
 import java.util.*;
 
+import static cd.go.contrib.elasticagent.Constants.ENVIRONMENT_LABEL_KEY;
 import static cd.go.contrib.elasticagent.Constants.JOB_ID_LABEL_KEY;
 import static cd.go.contrib.elasticagent.utils.Util.getSimpleDateFormat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -88,9 +89,9 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         Agent agent2 = new Agent(agentId2, Agent.AgentState.Idle, Agent.BuildState.Idle, Agent.ConfigState.Enabled); //idle just created
         Agent agent3 = new Agent(agentId3, Agent.AgentState.Building, Agent.BuildState.Building, Agent.ConfigState.Enabled); //running time elapsed
 
-        KubernetesInstance k8sPodForAgent1 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId1, Collections.emptyMap(), 1L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent2 = new KubernetesInstance(new DateTime(), null, agentId2, Collections.emptyMap(), 2L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent3 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId3, Collections.emptyMap(), 3L, PodState.Running, KubernetesInstance.AgentState.Unknown);
+        KubernetesInstance k8sPodForAgent1 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId1, Collections.emptyMap(), 1L, PodState.Running);
+        KubernetesInstance k8sPodForAgent2 = KubernetesInstance.of(new DateTime(), "test", agentId2, Collections.emptyMap(), 2L, PodState.Running);
+        KubernetesInstance k8sPodForAgent3 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId3, Collections.emptyMap(), 3L, PodState.Running);
 
         final Agents allAgentsInitially = new Agents(Arrays.asList(agent1, agent2, agent3));
         final Agents allAgentsAfterDisablingIdleAgents = new Agents(Arrays.asList(agent1AfterDisabling, agent2, agent3));
@@ -142,13 +143,13 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         Agent agent5 = new Agent(agentId5, Agent.AgentState.Idle, Agent.BuildState.Idle, Agent.ConfigState.Enabled); //idle just created
         Agent agent6 = new Agent(agentId6, Agent.AgentState.Building, Agent.BuildState.Building, Agent.ConfigState.Enabled); //running time elapsed
 
-        KubernetesInstance k8sPodForAgent1 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId1, Collections.emptyMap(), 1L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent2 = new KubernetesInstance(new DateTime(), null, agentId2, Collections.emptyMap(), 2L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent3 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId3, Collections.emptyMap(), 3L, PodState.Running, KubernetesInstance.AgentState.Unknown);
+        KubernetesInstance k8sPodForAgent1 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId1, Collections.emptyMap(), 1L, PodState.Running);
+        KubernetesInstance k8sPodForAgent2 = KubernetesInstance.of(new DateTime(), "test", agentId2, Collections.emptyMap(), 2L, PodState.Running);
+        KubernetesInstance k8sPodForAgent3 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId3, Collections.emptyMap(), 3L, PodState.Running);
 
-        KubernetesInstance k8sPodForAgent4 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId4, Collections.emptyMap(), 1L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent5 = new KubernetesInstance(new DateTime(), null, agentId5, Collections.emptyMap(), 2L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sPodForAgent6 = new KubernetesInstance(new DateTime().minusMinutes(100), null, agentId6, Collections.emptyMap(), 3L, PodState.Running, KubernetesInstance.AgentState.Unknown);
+        KubernetesInstance k8sPodForAgent4 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId4, Collections.emptyMap(), 1L, PodState.Running);
+        KubernetesInstance k8sPodForAgent5 = KubernetesInstance.of(new DateTime(), "test", agentId5, Collections.emptyMap(), 2L, PodState.Running);
+        KubernetesInstance k8sPodForAgent6 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", agentId6, Collections.emptyMap(), 3L, PodState.Running);
 
         final Agents allAgentsInitially = new Agents(Arrays.asList(agent1, agent2, agent3, agent4, agent5, agent6));
         final Agents allAgentsAfterDisablingIdleAgentsFromCluster1 = new Agents(Arrays.asList(agent1AfterDisabling, agent2, agent3, agent4, agent5, agent6));
@@ -202,7 +203,7 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         when(mockedOperation.withName(anyString())).thenReturn(podResource);
         when(podResource.get()).thenReturn(mockedPod);
         objectMetadata = new ObjectMeta();
-        objectMetadata.setLabels(Collections.singletonMap(JOB_ID_LABEL_KEY, "20"));
+        objectMetadata.setLabels(Map.of(JOB_ID_LABEL_KEY, "20", ENVIRONMENT_LABEL_KEY, "test"));
         objectMetadata.setName(unregisteredAgentId1);
         objectMetadata.setCreationTimestamp(getSimpleDateFormat().format(new Date(time - (20 * 60000))));
 
@@ -210,8 +211,8 @@ public class ServerPingRequestExecutorTest extends BaseTest {
 
         ClusterProfileProperties clusterProfilePropertiesForCluster1 = new ClusterProfileProperties("https://localhost:8154/go", null, null);
 
-        KubernetesInstance k8sUnregisteredCluster1Pod1 = new KubernetesInstance(new DateTime().minusMinutes(100), null, unregisteredAgentId1, Collections.emptyMap(), 3L, PodState.Running, KubernetesInstance.AgentState.Unknown);
-        KubernetesInstance k8sUnregisteredCluster1Pod2 = new KubernetesInstance(new DateTime(), null, unregisteredAgentId2, Collections.emptyMap(), 3L, PodState.Running, KubernetesInstance.AgentState.Unknown);
+        KubernetesInstance k8sUnregisteredCluster1Pod1 = KubernetesInstance.of(new DateTime().minusMinutes(100), "test", unregisteredAgentId1, Collections.emptyMap(), 3L, PodState.Running);
+        KubernetesInstance k8sUnregisteredCluster1Pod2 = KubernetesInstance.of(new DateTime(), "test", unregisteredAgentId2, Collections.emptyMap(), 3L, PodState.Running);
 
         final Agents allAgentsInitially = new Agents();
 
